sagitta-integration-tests/tests/snapshots/test__4-6.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: out5
---
Output {
    status: ExitStatus(
        unix_wait_status(
            0,
        ),
    ),
    stdout: "Hello, copy on write! (overwrite)\n",
    stderr: "",
}
