sagitta-integration-tests/tests/snapshots/test__4-7.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: out6
---
Output {
    status: ExitStatus(
        unix_wait_status(
            256,
        ),
    ),
    stdout: "",
    stderr: "bash: line 1: fail.txt: Operation not permitted\n",
}
