sagitta-integration-tests/tests/snapshots/test__5.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: out1
---
Output {
    status: ExitStatus(
        unix_wait_status(
            0,
        ),
    ),
    stdout: "total 0\ndrwxr-xr-x 2 0 Dec 22  2009 foo\n",
    stderr: "",
}
