sagitta-integration-tests/tests/snapshots/test__6-2.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: out1
---
Output {
    status: ExitStatus(
        unix_wait_status(
            0,
        ),
    ),
    stdout: "total 1\ndrwxr-xr-x 2 0 Dec 22  2009 foo\ndrwxr-xr-x 2 0 Dec 22  2009 foo\n-rw-r--r-- 1 7 Dec 22  2009 hello.txt\n",
    stderr: "",
}
