sagitta-integration-tests/tests/snapshots/test__6-3.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: out2
---
Output {
    status: ExitStatus(
        unix_wait_status(
            0,
        ),
    ),
    stdout: "total 1\n-rw-r--r-- 1 8 Dec 22  2009 hello2.txt\n",
    stderr: "",
}
