sagitta-integration-tests/tests/snapshots/test__6.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: sync_res
---
Ok(
    Ok {
        upsert_files: [
            [
                "foo",
                "hello2.txt",
            ],
            [
                "hello.txt",
            ],
        ],
    },
)
