sagitta-integration-tests/tests/snapshots/test__7-2.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: sync_res_2
---
Ok(
    Ok {
        upsert_files: [
            [
                "hello2.txt",
            ],
        ],
    },
)
