sagitta-integration-tests/tests/snapshots/test__7.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: sync_res
---
Ok(
    Ok {
        upsert_files: [
            [
                ".sagitta.toml",
            ],
            [
                "hello.txt",
            ],
        ],
    },
)
