sagitta-integration-tests/tests/snapshots/test__8.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: sync_res
---
Ok(
    Ok {
        upsert_files: [
            [
                ".sagitta.toml",
            ],
            [
                "foo",
                ".gitignore",
            ],
            [
                "foo",
                "Cargo.lock",
            ],
            [
                "foo",
                "Cargo.toml",
            ],
            [
                "foo",
                "src",
                "main.rs",
            ],
        ],
    },
)
